Minor changes to content, massively edited the whitespace to increase readability, and fixed the header hierarchy issue.

--- a/style.css
+++ b/style.css
@@ -12,8 +12,14 @@ div {
 }
 
 h1 { margin-top: 0px; }
-h3 { margin: 1em 0.5em; }
-h5 { margin: 0.5em; }
+h2 {
+    margin: 1em 0.5em;
+    font-size: 1.17em;
+}
+h3 {
+    margin: 0.5em;
+    font-size: .83em;
+}
 p { margin: 0.5em; }
 
 p.copyright {
